--- a/package.yaml
+++ b/package.yaml
@@ -15,6 +15,8 @@ dependencies:
   - base >= 4.7 && < 5
   - aeson
   - containers
+  - elm-bridge
+  - interpolatedstring-perl6
   - servant
   - servant-server
   - servant-elm
@@ -28,3 +30,4 @@ executables:
   servant-elm-generically:
     source-dirs:      src
     main:             Main.hs
+ghc-options: -Wall -Werror
